Adicionado instabug-app

--- a/demoapp/demoapp.csproj
+++ b/demoapp/demoapp.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
     <PackageReference Include="Xamarin.Essentials" Version="1.0.1" />
     <PackageReference Include="Xamarin.HotReload" Version="1.4.8" />
+    <PackageReference Include="MaterialFormControls" Version="2018.2.22-pre1" />
   </ItemGroup>
 </Project>
