--- a/demoapp.iOS/demoapp.iOS.csproj
+++ b/demoapp.iOS/demoapp.iOS.csproj
@@ -129,6 +129,12 @@
     <PackageReference Include="Xamarin.HotReload">
       <Version>1.4.8</Version>
     </PackageReference>
+    <PackageReference Include="instabug-for-ios">
+      <Version>8.2.2</Version>
+    </PackageReference>
+    <PackageReference Include="MaterialFormControls">
+      <Version>2018.2.22-pre1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
